--- a/users/templates/users/money.html
+++ b/users/templates/users/money.html
@@ -85,7 +85,7 @@ h1 {
     width: 100%;
     max-width: 600px;
     display: flex;
-    flex-direction: column;
+    flex-direction: column-reverse;
     align-items: center;
 }
 
