--- a/manager2/templates/manager2/home_man.html
+++ b/manager2/templates/manager2/home_man.html
@@ -24,13 +24,16 @@
         {% if photos %}
             {% for photo in photos %}
                 {% if not photo.is_completed %}
-                <div class="photo-card fade-in-item">
-                    <p><strong>Название макета:</strong> {{ photo.image_name }}</p>
-                    {% if photo.assigned_manager != None %}
-                        <p><strong>Назначен менеджер:</strong> {{ photo.assigned_manager.full_name }}</p>
-                    {% endif %}
-                    <a href="{% url 'manager_maket' photo.id %}" class="btn btn-primary">Подробнее</a>
-                </div>
+                    {%if photo.assigned_manager == request.user %}
+                        <div class="photo-card fade-in-item">
+                            <p><strong>Вы назначены на макет !</strong></p>
+                            <p><strong>Название макета:</strong> {{ photo.image_name }}</p>
+<!--                            {% if photo.assigned_manager != None %}-->
+<!--                                <p><strong>Назначен менеджер:</strong> {{ photo.assigned_manager.full_name }}</p>-->
+<!--                            {% endif %}-->
+                            <a href="{% url 'manager_maket' photo.id %}" class="btn btn-primary">Подробнее</a>
+                        </div>
+                    {%endif%}
                 {%endif%}
             {% endfor %}
             {% if not photos|length %}
