--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -44,6 +44,9 @@
                 <span class="register-text">Нет учетной записи?</span>
                 <a class="btn" href="{% url 'register' %}">Регистрация</a>
             </div>
+            <div class="register-section">
+                <a class="btn" href="{% url 'home' %}">Назад</a>
+            </div>
         </div>
     </div>
 </div>
