--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -82,6 +82,9 @@
             <span class="login-link">У вас уже есть учетная запись?</span><br>
             <a class="btn" href="{% url 'login' %}">Войти</a>
         </div>
+        <div class="login-section">
+            <a class="btn" href="{% url 'home' %}">Назад</a>
+        </div>
     </div>
 </div>
 
