--- a/users/templates/users/home.html
+++ b/users/templates/users/home.html
@@ -9,6 +9,14 @@
             <div class="button-container">
                 <a href="login" class="btn btn-primary mb-2">Войти</a>
                 <a href="register" class="btn btn-transparent">Регистрация</a>
+                <button id="installPWA" class="btn pwa-install-btn" aria-label="Установить приложение">
+                    <svg aria-hidden="true" focusable="false" width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M12 3v10" stroke="#000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path d="M8 9l4 4 4-4" stroke="#000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path d="M5 15h14v4a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2v-4z" stroke="#000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                    Установить
+                </button>
             </div>
         </div>
     </div>
