--- a/director/templates/director/profile_employee.html
+++ b/director/templates/director/profile_employee.html
@@ -1,14 +1,6 @@
 {% extends 'director/layout.html' %}
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    {% load static %}
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <title>Профиль пользователя</title>
-</head>
-<body>
+{% load static %}
+
 {% block content %}
 <div class="container">
     <h2 class="fade-in-item">Профиль пользователя</h2>
@@ -18,7 +10,7 @@
             <p class="card-text"><strong>Email:</strong> {{ user.email }}</p>
             <p class="card-text"><strong>Номер телефона:</strong> {{ user.phone_number }}</p>
             <p class="card-text"><strong>Дата рождения:</strong> {{ user.date_of_birth|date:"d.m.Y" }}</p>
-            <p class="card-text"><strong>Должность:</strong> {{ user.get_post_user_display }}</p>
+            <p class="card-text"><strong>Должность:</strong> {{ user.get_post_display }}</p>
             <p class="card-text"><strong>Рейтинг:</strong> {{ user.average_rating }}</p>
             <p class="card-text"><strong>Ставка:</strong> {{ user.stavka }}</p>
             <a href="{% url 'edit_user' user.id %}" class="btn">Редактировать</a>
@@ -131,5 +123,3 @@ h2 {
 .fade-in-item:nth-child(5) { animation-delay: 0.9s; }
 </style>
 {% endblock %}
-</body>
-</html>
