--- a/manager2/templates/manager2/upload_photo.html
+++ b/manager2/templates/manager2/upload_photo.html
@@ -155,7 +155,7 @@ html, body {
     border-radius: 20px;
     border: 1px solid white;
     background-color: white;
-    width: 100px;
+    width: auto;
     height: 20px;
     padding: 0;
     display: flex;
