--- a/users/templates/users/startapp.html
+++ b/users/templates/users/startapp.html
@@ -127,7 +127,7 @@ html, body {
     border-radius: 20px;
     border: 1px solid white;
     background-color: white;
-    width: 100px;
+    width: auto;
     height: 20px;
     padding: 0; /* Минимальный отступ для компактности */
     display: flex;
