--- a/manager2/templates/manager2/profile_employee_manager.html
+++ b/manager2/templates/manager2/profile_employee_manager.html
@@ -12,8 +12,9 @@
             <p class="card-text"><strong>Дата рождения:</strong> {{ user.date_of_birth|date:"d.m.Y" }}</p>
             <p class="card-text"><strong>Должность:</strong> {{ user.get_post_display }}</p>
             <p class="card-text"><strong>Рейтинг:</strong> {{ user.average_rating }}</p>
-            {% if is_senior %}
-                <p class="card-text"><strong>Ставка:</strong> {{ user_stavka }}</p>
+            {% if user.post_user == "senior_manager" %}
+                <p class="card-text"><strong>Ставка:</strong> {{ user.stavka }}</p>
+            {%else%}
             {% endif %}
 
         </div>
