--- a/director/templates/director/salary_report.html
+++ b/director/templates/director/salary_report.html
@@ -114,6 +114,9 @@
             <div style="height: 20% !important;"></div>
         </div>
     </div>
+    <div style = "height: 100px;">
+
+    </div>
 </div>
 
 <style>
