--- a/director/templates/director/employee.html
+++ b/director/templates/director/employee.html
@@ -49,7 +49,9 @@
                 {% endfor %}
             </tbody>
         </table>
-        <div class="empty"></div>
+        <div style = "height: 100px;">
+
+    </div>
     </div>
 </main>
 <style>
