--- a/director/templates/director/employee_manager.html
+++ b/director/templates/director/employee_manager.html
@@ -45,6 +45,9 @@
                 {% endfor %}
             </tbody>
         </table>
+        <div style = "height: 100px;">
+
+        </div>
     </div>
 </main>
 <style>
