--- a/director/templates/director/employee_manager.html
+++ b/director/templates/director/employee_manager.html
@@ -18,6 +18,7 @@
         <table class="table">
             <thead>
                 <tr>
+                    <th>Онлайн</th>
                     <th>Полное имя</th>
                     <th>Должность</th>
                     <th>Профиль</th>
@@ -29,8 +30,16 @@
                 {% for user in users %}
                     {% if user.is_active %}
                     <tr>
+                        <td>
+                            {% if user.is_online %}
+                                <span style="color: green; font-weight: bold;">● Онлайн</span>
+                            {% else %}
+                                <span style="color: red; font-weight: bold;">● Оффлайн</span>
+                            {% endif %}
+                        </td>
                         <td>{{ user.full_name }}</td>
                         <td>{{ user.get_post_user_display }}</td>
+
                         <td>
                             <a href="{% url 'profile_employee' user.id %}" class="btn btn-primary">Профиль</a>
                         </td>
@@ -45,9 +54,7 @@
                 {% endfor %}
             </tbody>
         </table>
-        <div style = "height: 100px;">
-
-        </div>
+        <div style="height: 100px;"></div>
     </div>
 </main>
 <style>
